started styling on cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="container-fluid text-center text-black p-2">
-        <h1>Pocket Cookbook</h1>
+        <h1 id="header" class="text-left">Pocket Cookbook</h1>
       </header>
      <!-- Search form -->
 <!-- Search form -->
@@ -59,19 +59,20 @@
     </div>
   </div>
 </div>
+<!-- Cards for inspiration -->
 <div class="container">
-    <div class="row">
+    <div class="row" id="inspiration">
       <div class="col-4">
-        <img id="img6" src="" class="card-img-top" alt="...">
-        <div id="title6" class="card">7</div>
+        <img id="img9" src="./assets/images/coffee.jpg" class="card-img-top cardImage" alt="...">
+        <div id="title9" class="card cardTitle">Testing 1</div>
       </div>
       <div class="col-4">
-        <img id="img7" src="" class="card-img-top" alt="...">
-        <div id="title7" class="card">8</div>
+        <img id="img10" src="./assets/images/concert.jpg" class="card-img-top cardImage" alt="...">
+        <div id="title10" class="card cardTitle">Testing 2</div>
       </div>
       <div class="col-4">
-        <img id="img8" src="" class="card-img-top" alt="...">
-        <div id="title8" class="card">9</div>
+        <img id="img11" src="./assets/images/cycle.jpg" class="card-img-top cardImage" alt="...">
+        <div id="title11" class="card cardTitle">Testing 3</div>
       </div>
     </div>
   </div>
@@ -83,14 +84,18 @@
     <!-- Line Break followed by closing -->
 
     <img id="giphy1" src="" class="card-img-top" alt="...">
-
-    <hr>
-    <h5 class="text-center">
-      <small>Made by const jOjOjO
-        <i class="fa fa-heart"></i>
-      </small>
-    </h5>
   </div>
+</div>
+
+<footer>
+  <hr>
+  <h5 class="text-center">
+    <small>Made by const jOjOjO
+      <i class="fa fa-heart"></i>
+    </small>
+  </h5>
+</footer>
+  
 
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
