--- a/index.html
+++ b/index.html
@@ -30,46 +30,66 @@
 
   <!--cards -->
 
-  <div class="container">
+  <div class="container" id="container1">
 
     <div class="row">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img0" src="" class="card-img-top" alt="...">
-        <div id="title0" class="card">1
-        </div>
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card0">
+        <!-- <img id="img0" src="" class="card-img-top" alt="...">
+        <div id="title0" class="card">1 -->
+        <!-- </div> -->
       </div>
 
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img1" src="" class="card-img-top" alt="...">
-        <div id="title1" class="card">2
-        </div>
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card1">
+        <!-- <img id="img1" src="" class="card-img-top" alt="...">
+        <div id="title1" class="card">2 -->
+        <!-- </div> -->
 
       </div>
 
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img2" src="" class="card-img-top" alt="...">
-        <div id="title2" class="card">3
-        </div>
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card2">
+        <!-- <img id="img2" src="" class="card-img-top" alt="...">
+        <div id="title2" class="card">3 -->
+        <!-- </div> -->
       </div>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" id="container2">
     <div class="row">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img3" src="" class="card-img-top" alt="...">
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card3">
+        <!-- <img id="img3" src="" class="card-img-top" alt="...">
         <div id="title3" class="card">4
-        </div>
+        </div> -->
       </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img4" src="" class="card-img-top" alt="...">
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card4">
+        <!-- <img id="img4" src="" class="card-img-top" alt="...">
         <div id="title4" class="card">5
-        </div>
+        </div> -->
       </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img5" src="" class="card-img-top" alt="...">
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card5">
+        <!-- <img id="img5" src="" class="card-img-top" alt="...">
         <div id="title5" class="card">6
-        </div>
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="container 3">
+    <div class="row">
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card6">
+        <!-- <img id="img3" src="" class="card-img-top" alt="...">
+        <div id="title3" class="card">4
+        </div> -->
+      </div>
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card7">
+        <!-- <img id="img4" src="" class="card-img-top" alt="...">
+        <div id="title4" class="card">5
+        </div> -->
+      </div>
+      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card8">
+        <!-- <img id="img5" src="" class="card-img-top" alt="...">
+        <div id="title5" class="card">6
+        </div> -->
       </div>
     </div>
   </div>
@@ -77,6 +97,7 @@
 
   <!-- Cards for inspiration -->
   <div class="container">
+    <h3>Need some inspiration...</h3>
     <div class="row" id="inspiration">
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img id="img9" src="./assets/images/coffee.jpg" class="card-img-top cardImage" alt="...">
