updated recipe js so that the existing are removed on new search

--- a/index.html
+++ b/index.html
@@ -29,70 +29,30 @@
   </nav>
 
   <!--cards -->
-
-  <div class="container" id="container1">
-
-    <div class="row">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card0">
-        <!-- <img id="img0" src="" class="card-img-top" alt="...">
-        <div id="title0" class="card">1 -->
-        <!-- </div> -->
-      </div>
-
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card1">
-        <!-- <img id="img1" src="" class="card-img-top" alt="...">
-        <div id="title1" class="card">2 -->
-        <!-- </div> -->
-
-      </div>
-
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card2">
-        <!-- <img id="img2" src="" class="card-img-top" alt="...">
-        <div id="title2" class="card">3 -->
-        <!-- </div> -->
+  <main>
+    <div class="container" id="container1">
+      <div class="row">
+        <div class="col-4 recipeCard" id="card0"></div>
+        <div class="col-4 recipeCard" id="card1"></div>
+        <div class="col-4 recipeCard" id="card2"></div>
       </div>
     </div>
-  </div>
 
-  <div class="container" id="container2">
-    <div class="row">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card3">
-        <!-- <img id="img3" src="" class="card-img-top" alt="...">
-        <div id="title3" class="card">4
-        </div> -->
-      </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card4">
-        <!-- <img id="img4" src="" class="card-img-top" alt="...">
-        <div id="title4" class="card">5
-        </div> -->
-      </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card5">
-        <!-- <img id="img5" src="" class="card-img-top" alt="...">
-        <div id="title5" class="card">6
-        </div> -->
+    <div class="container" id="container2">
+      <div class="row">
+        <div class="col-4 recipeCard" id="card3"></div>
+        <div class="col-4 recipeCard" id="card4"></div>
+        <div class="col-4 recipeCard" id="card5"></div>
       </div>
     </div>
-  </div>
 
-  <div class="container" id="container 3">
-    <div class="row">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card6">
-        <!-- <img id="img3" src="" class="card-img-top" alt="...">
-        <div id="title3" class="card">4
-        </div> -->
-      </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card7">
-        <!-- <img id="img4" src="" class="card-img-top" alt="...">
-        <div id="title4" class="card">5
-        </div> -->
-      </div>
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal" id="card8">
-        <!-- <img id="img5" src="" class="card-img-top" alt="...">
-        <div id="title5" class="card">6
-        </div> -->
+    <div class="container" id="container 3">
+      <div class="row">
+        <div class="col-4 recipeCard" id="card6"></div>
+        <div class="col-4 recipeCard" id="card7"></div>
+        <div class="col-4 recipeCard" id="card8"></div>
       </div>
     </div>
-  </div>
 
 
   <!-- Cards for inspiration -->
@@ -118,6 +78,7 @@
       </div>
     </div>
   </div>
+</main>
 
 
 
