--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     <div class="row" id="inspiration">
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img id="img9" src="./assets/images/coffee.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title9" class="card cardTitle">Testing 1
+        <div id="title9" class="card cardTitle">Test
         </div>
       </div>
 
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img id="img10" src="./assets/images/concert.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title10" class="card cardTitle">Testing 2
+        <div id="title10" class="card cardTitle">Test
         </div>
       </div>
 
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img id="img11" src="./assets/images/cycle.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title11" class="card cardTitle">Testing 3
+        <div id="title11" class="card cardTitle">Test
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
 
       <!-- Line Break followed by closing -->
 
-      <img id="giphy1" src="assets/images/placeholdergiphy.gif" class="card-img-top" alt="...">
+      <!-- <img id="giphy1" src="assets/images/placeholdergiphy.gif" class="card-img-top" alt="..."> -->
 
     </div>
   </div>
