--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </form>
   </nav>
 
+  <!-- History -->
+  <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="clear-history">Clear history</button>
+
   <!--cards -->
   <main>
     <div class="container" id="container1">
