fix random recipe function

--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
     <h3>Need some inspiration...</h3>
     <div class="row" id="inspiration">
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img9" src="./assets/images/coffee.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title9" class="card cardTitle">Test
+        <img src="" class="card-img-top cardImage inspCardImg0" alt="...">
+        <div class="card cardTitle inspCard0">
         </div>
       </div>
 
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img10" src="./assets/images/concert.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title10" class="card cardTitle">Test
+        <img src="" class="card-img-top cardImage inspCardImg1" alt="...">
+        <div class="card cardTitle inspCard1">
         </div>
       </div>
 
       <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
-        <img id="img11" src="./assets/images/cycle.jpg" class="card-img-top cardImage" alt="...">
-        <div id="title11" class="card cardTitle">Test
+        <img src="" class="card-img-top cardImage inspCardImg2" alt="...">
+        <div class="card cardTitle inspCard2">
         </div>
       </div>
     </div>
@@ -83,11 +83,11 @@
 
 
   <div class="row">
-    <div class="col-sm-12">
+    <div id="giphy" class="col-sm-12">
 
       <!-- Line Break followed by closing -->
 
-      <!-- <img id="giphy1" src="assets/images/placeholdergiphy.gif" class="card-img-top" alt="..."> -->
+      <img id="giphy1" src="" class="card-img-top" alt="...">
 
     </div>
   </div>
