dynamically add giphy on search

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 </main>
 
 
-
+<!-- Giphy section -->
   <div class="row">
     <div id="giphy" class="col-sm-12">
 
       <!-- Line Break followed by closing -->
 
-      <img id="giphy1" src="" class="card-img-top" alt="...">
+      <!-- <img id="giphy1" src="" class="card-img-top" alt="..."> -->
 
     </div>
   </div>
