--- a/index.html
+++ b/index.html
@@ -29,31 +29,34 @@
   </nav>
 
   <!-- History -->
-  <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="clear-history">Clear history</button>
+  <div>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="clear-history">Clear history</button>    
+    <div id="historyRecipe" class="previousSearch"></div>
+  </div>
 
   <!--cards -->
   <main>
     <div class="container" id="container1">
       <div class="row">
-        <div class="col-4 recipeCard" id="card0"></div>
-        <div class="col-4 recipeCard" id="card1"></div>
-        <div class="col-4 recipeCard" id="card2"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card0"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card1"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card2"></div>
       </div>
     </div>
 
     <div class="container" id="container2">
       <div class="row">
-        <div class="col-4 recipeCard" id="card3"></div>
-        <div class="col-4 recipeCard" id="card4"></div>
-        <div class="col-4 recipeCard" id="card5"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card3"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card4"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card5"></div>
       </div>
     </div>
 
     <div class="container" id="container 3">
       <div class="row">
-        <div class="col-4 recipeCard" id="card6"></div>
-        <div class="col-4 recipeCard" id="card7"></div>
-        <div class="col-4 recipeCard" id="card8"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card6"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card7"></div>
+        <div class="col-md-4 col-sm-12 recipeCard" id="card8"></div>
       </div>
     </div>
 
@@ -62,19 +65,19 @@
   <div class="container">
     <h3>Need some inspiration...</h3>
     <div class="row" id="inspiration">
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
+      <div class="col-md-4 col-sm-12 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img src="" class="card-img-top cardImage inspCardImg0" alt="...">
         <div class="card cardTitle inspCard0">
         </div>
       </div>
 
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
+      <div class="col-md-4 col-sm-12 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img src="" class="card-img-top cardImage inspCardImg1" alt="...">
         <div class="card cardTitle inspCard1">
         </div>
       </div>
 
-      <div class="col-4 recipeCard" data-toggle="modal" data-target="#exampleModal">
+      <div class="col-md-4 col-sm-12 recipeCard" data-toggle="modal" data-target="#exampleModal">
         <img src="" class="card-img-top cardImage inspCardImg2" alt="...">
         <div class="card cardTitle inspCard2">
         </div>
